fix: Make the height of columns stretch

--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,9 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+
   min-height: 100vh;
   padding: 2rem 3.6rem;
   background: linear-gradient(to left bottom, rgb(55, 65, 81), rgb(17, 24, 39), rgb(0, 0, 0));
@@ -98,7 +101,6 @@ header .title {
   border: 1px solid rgb(17, 24, 39);
   border-radius: 0.4rem;
   background-color: rgb(0, 0, 0);
-  box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.4);
 }
 
 .news-content:has(.ph) {
@@ -162,6 +164,10 @@ header .title {
 
 @media (min-width: 768px) {
 
+  body {
+    height: 100vh;
+  }
+
   /* Custom Scrollbar */
   ::-webkit-scrollbar {
     width: 10px;
@@ -183,12 +189,20 @@ header .title {
   }
 
   .news {
+    height: 100%;
+    overflow-y: hidden;
+
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 2rem;
   }
 
+  .news-column {
+    height: 100%;
+    overflow-y: hidden;
+  }
+
   .news-content {
-    height: 50rem;
+    height: 100%;
   }
 }
